; ModuleID = '/home/carl/AnghaBench/openssl/apps/extr_req.c_build_subject.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/extr_req.c_build_subject.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i64, i32)* @build_subject to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @build_subject(i32* %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i8*, i8** %7, align 8
  %12 = load i64, i64* %8, align 8
  %13 = load i32, i32* %9, align 4
  %14 = call i32* @parse_name(i8* %11, i64 %12, i32 %13)
  store i32* %14, i32** %10, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %28

17:                                               ; preds = %4
  %18 = load i32*, i32** %6, align 8
  %19 = load i32*, i32** %10, align 8
  %20 = call i32 @X509_REQ_set_subject_name(i32* %18, i32* %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %25, label %22

22:                                               ; preds = %17
  %23 = load i32*, i32** %10, align 8
  %24 = call i32 @X509_NAME_free(i32* %23)
  store i32 0, i32* %5, align 4
  br label %28

25:                                               ; preds = %17
  %26 = load i32*, i32** %10, align 8
  %27 = call i32 @X509_NAME_free(i32* %26)
  store i32 1, i32* %5, align 4
  br label %28

28:                                               ; preds = %25, %22, %16
  %29 = load i32, i32* %5, align 4
  ret i32 %29
}

declare dso_local i32* @parse_name(i8*, i64, i32) #1

declare dso_local i32 @X509_REQ_set_subject_name(i32*, i32*) #1

declare dso_local i32 @X509_NAME_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
